--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start-dev": "npm run build-watch & npm run start-server",
     "start-server": "nodemon main.js -e html,js,css --ignore public",
     "build-watch": "webpack -w",
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "echo 'Running server for production - developers, use npm run start-dev for development' && node main"
   },
@@ -24,18 +25,25 @@
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
-    "babel-loader": "^8.1.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.2.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "browserslist": "^4.14.7",
     "express": "^4.17.1",
     "pg": "^8.4.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "sequelize": "^6.3.5",
+    "three": "^0.122.0",
     "volleyball": "^1.5.1"
   }
 }
